force-app/main/default/objects/External_Provider_ID__c/External_Provider_ID__c.object-meta.xml
<CustomObject>
    <description>This object represents unique IDs associated to a Researcher provided by external agencies Like ORC/Clarivate/SCOPUS</description>
    <label>External Provider ID</label>
    <nameField>
        <label>External Provider ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Provider ID</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>