force-app/main/default/objects/External_Provider_ID__c/fields/I_RS_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of Researcher</description>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Provider ID</relationshipLabel>
    <relationshipName>External_Provider_ID</relationshipName>
    <type>Lookup</type>
</CustomField>