force-app/main/default/objects/External_Provider_ID__c/fields/I_RS_External_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Provider_ID__c</fullName>
    <description>An Unique ID for a Researcher by a provider</description>
    <label>External Provider ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>