force-app/main/default/objects/External_Provider_ID__c/fields/I_RS_Provider__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>WOS</fullName>
            </value>
            <value>
                <fullName>SCOPUS</fullName>
            </value>
            <value>
                <fullName>ORCID</fullName>
            </value>
            <value>
                <fullName>Clarivate</fullName>
                <isActive>false</isActive>
                <label>Clarivate</label>
            </value>
            <value>
                <fullName>ORC</fullName>
                <isActive>false</isActive>
                <label>ORC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>