force-app/main/default/objects/External_Provider_ID__c/listViews/All_External_Provider_ID.listView-meta.xml
<ListView>
    <fullName>All_External_Provider_ID</fullName>
    <columns>NAME</columns>
    <columns>I_RS_External_Provider_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All External Provider ID</label>
</ListView>